crates/analytics/tests/compile_fail/pack_cannot_return_fact.stderr
error[E0053]: method `solve` has an incompatible type for trait
  --> tests/compile_fail/pack_cannot_return_fact.rs:22:66
   |
22 |     fn solve(&self, _spec: &converge_pack::gate::ProblemSpec) -> converge_pack::GateResult<Fact> {
   |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `PackSolveResult`, found `Fact`
   |
   = note: expected signature `fn(&EvilPack, &ProblemSpec) -> Result<PackSolveResult, GateError>`
              found signature `fn(&EvilPack, &ProblemSpec) -> Result<Fact, GateError>`
help: change the output type to match the trait
   |
22 -     fn solve(&self, _spec: &converge_pack::gate::ProblemSpec) -> converge_pack::GateResult<Fact> {
22 +     fn solve(&self, _spec: &converge_pack::gate::ProblemSpec) -> Result<PackSolveResult, GateError> {
   |
